--- a/FRONTEND/CSS/style.css
+++ b/FRONTEND/CSS/style.css
@@ -48,6 +48,9 @@ h3 {
     text-align: center;
     color: blue;
     transition: 1s;
+    text-transform: uppercase;
+    font-family: 'Tajawal', sans-serif;
+    align-items: center;
 }
 
 h4 {
@@ -55,6 +58,11 @@ h4 {
     color: hotpink;
     opacity: 0;
     transition: 1s;
+    font-family: 'Tajawal', sans-serif;
+}
+
+h4 > a {
+    text-transform: uppercase;
 }
 
 h4.yay {
@@ -83,15 +91,40 @@ article > p {
 
 main {
     display: flex;
+    flex-direction: column;
 
+}
+
+main > p {
+    text-align: left;
 }
 
 main > img {
-    max-width: 50em;
-    max-height: 50em;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /*TEKST RESPONSIVE MAKEN*/
+
+/* @media (min-width: 10em) {
+    main > p {
+        color: hotpink;
+    }
+}
+
+@media (min-width: 10em) {
+    main > p {
+        color: hotpink;
+
+    }
+}
+@media (min-width: 10em) {
+    main > p {
+        color: hotpink;
+
+    }
+}
+ */
 
 article > a > img {
     /*     max-height: 100%; */
@@ -283,98 +316,94 @@ article:nth-child(even) {
 }
 */
 
-@media (min-width: 60em) {
-    body > p {
-        padding-left: 1em;
-        padding-right: 1em;
-    }
-    */
-    /*
+/*
 li > a > img {
     max-height: 100px;
 */
-    /* Formulier*/
-    form {
-        display: flex;
-        flex-direction: column;
-        padding: 1em;
-        background: Lavender;
-        transition: all .3s;
-    }
 
-    fieldset {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+/* Formulier*/
 
-        border-width: 0.4em;
-        border-color: azure;
-        transition: all .2s;
-        padding: 1em;
-    }
+form {
+    display: flex;
+    flex-direction: column;
+    padding: 1em;
+    background: Lavender;
+    transition: all .3s;
+}
 
-    fieldset:valid p {
-        display: block;
-        background: Green;
-        padding: 0.15em;
-    }
+fieldset {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-    fieldset:invalid {
-        background: rgba(255, 160, 122, .3);
-    }
+    border-width: 0.4em;
+    border-color: azure;
+    transition: all .2s;
+    padding: 1em;
+}
 
-    fieldset:invalid p {
-        display: none;
-    }
+fieldset:valid p {
+    display: block;
+    background: Green;
+    padding: 0.15em;
+}
 
-    legend {
-        font-weight: bold;
-    }
+fieldset:invalid {
+    background: rgba(255, 160, 122, .3);
+}
+
+fieldset:invalid p {
+    display: none;
+}
+
+legend {
+    font-weight: bold;
+}
 
 
-    input {
-        border-color: #000;
-        padding: .25em;
-        font-size: 1.25em;
-        margin-bottom: 1em;
-        width: 100%;
-        transition: all 2s;
-        z-index: 2;
-    }
+input {
+    border-color: #000;
+    padding: .25em;
+    font-size: 1.25em;
+    margin-bottom: 1em;
+    width: 100%;
+    transition: all 2s;
+    z-index: 2;
+}
 
-    input:valid {
-        border-color: rgba(127, 255, 212, 0.5);
-    }
+input:valid {
+    border-color: rgba(127, 255, 212, 0.5);
+}
 
-    input:invalid {
-        border-color: LightSlateGray;
-        background: rgba(175, 238, 238, 0.55);
-    }
+input:invalid {
+    border-color: LightSlateGray;
+    background: rgba(175, 238, 238, 0.55);
+}
 
-    input:focus {
-        transform: scale(1.01, 1.01);
-    }
+input:focus {
+    transform: scale(1.01, 1.01);
+}
 
-    input:disabled {
-        border-color: #eee;
-        background-color: #f9f9f9;
-    }
+input:disabled {
+    border-color: #eee;
+    background-color: #f9f9f9;
+}
 
-    button {
-        background-color: rgba(219, 112, 147, 1);
-        border: none;
-        color: white;
-        padding: 1em 1em;
-        text-align: center;
-        text-decoration: none;
-        font-size: 1em;
-        margin-top: 0.5em;
-        margin-left: 5em;
-        margin-right: 5em;
-    }
+button {
+    background-color: rgba(219, 112, 147, 1);
+    border: none;
+    color: white;
+    padding: 1em 1em;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1em;
+    margin-top: 0.5em;
+    margin-left: 5em;
+    margin-right: 5em;
+}
 
-    button:focus {
-        transform: scale(1.01, 1.01);
-    }
+button:focus {
+    transform: scale(1.01, 1.01);
+}
 
-    /* Jowently logo animationr*/
+/* Jowently logo animationr*/
