--- a/FRONTEND/CSS/style.css
+++ b/FRONTEND/CSS/style.css
@@ -12,8 +12,9 @@ ul {
 }
 
 li {
-    padding: 2rem;
+    padding: 1em;
 }
+
 
 /* li:nth-of-type(1) {
 height: 3em;
@@ -180,15 +181,13 @@ section {
     margin: auto;
     grid-gap: 1em;
     max-width: 80em;
-    padding-left: 1em;
-
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
 article {
     grid-column-start: 1;
-    grid-column-end: 12;
+    grid-column-end: 13;
 
 }
 
@@ -405,5 +404,23 @@ button {
 button:focus {
     transform: scale(1.01, 1.01);
 }
+
+/* body > p {
+    margin-right: 2em;
+    margin-left: 1em;
+} */
+
+body > div {
+    max-width: 80em;
+    margin: auto;
+
+}
+
+/* @media (min-width: 10em) {
+    body > p {
+
+        margin-right: 2em;
+        margin-left: 1em;
+    } */
 
 /* Jowently logo animationr*/
